--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
   <head>
     <title>Cowtris</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="cowtris.js"></script>
   </head>
   <body onload="init()">
   	<div id="container">
 	  	<div id="left">
-	  		<canvas width="800" height="600"></canvas>
+	  		<canvas id="canvas" width="100" height="100"></canvas>
 	  	</div>
-		
+
 		<div id="right">
 			<img id="title" src="./resources/images/title.png" />
-			
+
 			<div id="info_container">
 				<table>
 					<tr>
@@ -21,22 +21,22 @@
 					</tr>
 					<tr>
 						<td>Rows</td>
-						<td id="rows">0</td>					
+						<td id="rows">0</td>
 					</tr>
 					<tr>
 						<td>Level</td>
-						<td id="level">1</td>					
+						<td id="level">1</td>
 					</tr>
 					<tr>
 						<td>Next</td>
 						<td id="next">
 							<div id="next_image"></div><br>
 							<span id="next_name"></span>
-						</td>					
+						</td>
 					</tr>
 				</table>
 			</div>
-		</div>	
-	</div>	
+		</div>
+	</div>
   </body>
 </html>
