Cow's are falling!

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="clone.js"></script>
     <script type="text/javascript" src="cowtris.js"></script>
   </body>
 </html>
