--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <body onload="init()">
   	<div id="container">
 	  	<div id="left">
-	  		<canvas id="canvas" width="100" height="100"></canvas>
+	  		<canvas id="canvas" width="200" height="440"></canvas>
 	  	</div>
-
 		<div id="right">
 			<img id="title" src="./resources/images/title.png" />
 
@@ -38,7 +37,7 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="clone.js"></script>
+	<script type="text/javascript" src="snippets.js"></script>
     <script type="text/javascript" src="cowtris.js"></script>
   </body>
 </html>
