we're zapping cows

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body onload="init()">
   	<div id="container">
 	  	<div id="left">
-	  		<canvas id="canvas" width="200" height="440"></canvas>
+	  		<canvas id="game_canvas" width="200" height="440"></canvas>
 	  	</div>
 		<div id="right">
 			<img id="title" src="./resources/images/title.png" />
