--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <canvas id="preview" width="84" height="52">
                                 </canvas>
                                 <br>
-                                <span id="next_name">
+                                <span id="preview_name">
                                 </span>
                             </td>
                         </tr>
@@ -65,12 +65,7 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="snippets.js">
-                
-        </script>
-        <script type="text/javascript" src="cowtris.js">
-                
-        </script>
+        <script type="text/javascript" src="cowtris.js"></script>
     </body>
 
 </html>
