add the essential sounds

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
             </div>
         </div>
         <script type="text/javascript" src="cowtris.js"></script>
+        <audio id="audio_madcow" src="resources/sounds/madcow.wav" preload="auto"/>
+        <audio id="audio_row" src="resources/sounds/Zap.wav" preload="auto"/>
+        <audio id="audio_multirow" src="resources/sounds/Zap2.wav" preload="auto"/>
+        <audio id="audio_gameover" src="resources/sounds/Die.wav" preload="auto"/>
     </body>
 
 </html>
